# NVIDIA-NeMo-Valohai

./: .gitignore  .pre-commit-config.yaml  README.md  evaluate.py  prepare-dataset.py  pyproject.toml  requirements.txt  train.py  valohai.yaml
.github/workflows/: ci.yml
